[project]
name = "cvi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29.0",
    "ipykernel>=6.25.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyyaml>=6.0",
    "scipy>=1.10.0",
    "seaborn",
    "torch>=2.10.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
]
